outputs/workspace_output_1773830632_5439.txt
  File "<stdin>", line 9
    print(f"Has entity: {'"' in lines[4740]}")
                           ^
SyntaxError: unterminated string literal (detected at line 9)
